<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="#1F1F1F">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="166dp"
            android:layout_height="167dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/daniharmade" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#B0BEC5"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btn_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FF9800"
            android:text="@string/contact_me"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_connect"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#FF9800"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_linkedin"
                    android:layout_width="52dp"
                    android:layout_height="54dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/ic_linkedin" />

                <ImageView
                    android:id="@+id/img_youtube"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_youtube" />

                <ImageView
                    android:id="@+id/img_instagram"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:src="@drawable/ic_instagram" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
